<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.spendingtracer.fragments.addexpense.AddExpenseFragment">

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sans_pro_bold"
            android:text="@string/add_expense"
            android:textSize="36sp"
            android:textColor="@color/white"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/ic_background_round_corners"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llHeader">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sans_pro_semibold"
            android:padding="10dp"
            android:text="@string/name"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvName"
            android:background="@color/transparent"
            android:hint="@string/enter_expense_name"
            android:inputType="text"
            android:padding="10dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlBalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/ic_background_round_corners"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rlName">

        <TextView
            android:id="@+id/tvExpenseAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sans_pro_semibold"
            android:padding="10dp"
            android:text="@string/expense_amount"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/ivCurrencySign"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_euro"
            android:layout_alignBottom="@+id/etExpenseAmount"
            android:layout_below="@+id/tvExpenseAmount"
            android:layout_marginStart="5dp"/>

        <EditText
            android:id="@+id/etExpenseAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvExpenseAmount"
            android:layout_toEndOf="@+id/ivCurrencySign"
            android:background="@color/transparent"
            android:hint="@string/enter_money_amount_here"
            android:inputType="numberDecimal"
            android:padding="10dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/ic_background_round_corners"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rlBalance">

        <TextView
            android:id="@+id/tvLabelCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sans_pro_semibold"
            android:padding="10dp"
            android:text="@string/category"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spExpenseCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvLabelCategory"
            android:layout_marginTop="1dp"
            android:padding="10dp"
            android:spinnerMode="dropdown"
            android:textAlignment="textStart" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlPaymentMethod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/ic_background_round_corners"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rlCategory">

        <TextView
            android:id="@+id/tvLabelPaymentMethod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sans_pro_semibold"
            android:padding="10dp"
            android:text="@string/payment_method"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spPaymentMethod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvLabelPaymentMethod"
            android:layout_marginTop="1dp"
            android:padding="10dp"
            android:spinnerMode="dropdown"
            android:textAlignment="textStart" />

    </RelativeLayout>

    <Button
        android:id="@+id/btnAddExpense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="15dp"
        android:padding="15dp"
        android:text="@string/insert_expense"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>