<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.spendingtracer.fragments.home.HomeFragment">

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sans_pro_bold"
            android:text="@string/overview"
            android:textSize="36sp"
            android:textColor="@color/white"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlBalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/ic_background_round_corners"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llHeader">

        <TextView
            android:id="@+id/tvExpenseAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sans_pro_semibold"
            android:padding="10dp"
            android:text="@string/total_balance"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvAccountBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvExpenseAmount"
            android:fontFamily="@font/sans_pro_semibold"
            android:padding="10dp"
            android:textSize="18sp"
            tools:text="$2523.12" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/rlAccountItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rlBalance">

        <LinearLayout
            android:id="@+id/llBankBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/ic_background_round_corners">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_bank"
                android:layout_gravity="center"
                android:layout_marginStart="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sans_pro_semibold"
                android:padding="10dp"
                android:text="@string/bank_balance"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvBankBalanceAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sans_pro_regular"
                android:padding="10dp"
                tools:text="$2231.4"
                android:textAlignment="textEnd"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llCashBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/ic_background_round_corners">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_cash"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sans_pro_semibold"
                android:padding="10dp"
                android:text="@string/cash"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvCashAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sans_pro_regular"
                android:padding="10dp"
                tools:text="$231.4"
                android:textAlignment="textEnd"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llFoodAllowanceBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/ic_background_round_corners">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_food_allowance"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sans_pro_semibold"
                android:padding="10dp"
                android:text="@string/food_allowance"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvFoodAllowanceAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sans_pro_regular"
                android:padding="10dp"
                tools:text="$151.4"
                android:textAlignment="textEnd"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSavingBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_background_round_corners">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_savings"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sans_pro_semibold"
                android:padding="10dp"
                android:text="@string/saving"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvSavingAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sans_pro_regular"
                android:padding="10dp"
                tools:text="$552.42"
                android:textAlignment="textEnd"
                android:textSize="18sp" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/ic_background_round_corners">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_euro"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"/>

        <EditText
            android:id="@+id/et_add_money_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/enter_money_amount_here"
            android:background="@color/transparent"
            android:padding="10dp"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <Button
                android:id="@+id/btnAddMoney"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sans_pro_semibold"
                android:padding="10dp"
                android:text="@string/add_money"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spMoneyCategory"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/bank_balance"
                android:textAlignment="center"
                android:padding="20dp"
                android:spinnerMode="dropdown" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>